Attempt (unsuccessfully) to increase max PermGen